v0.0.1/modules/schema/pages/enumeration/Currency.adoc
= `Currency`
:toclevels: 4


+++Monetary currencies.  ISO 4217 standard including 3-character currency code.+++


[cols="h,3",width=65%]
|===
| Type
| Enumeration

| URI
| `cim:Currency`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Values

[cols="1,1,5",width=100%]
|===
| Value | URI | Description

| `AED`
| `cim:Currency.AED`
| n/a

| `AFN`
| `cim:Currency.AFN`
| n/a

| `ALL`
| `cim:Currency.ALL`
| n/a

| `AMD`
| `cim:Currency.AMD`
| n/a

| `ANG`
| `cim:Currency.ANG`
| n/a

| `AOA`
| `cim:Currency.AOA`
| n/a

| `ARS`
| `cim:Currency.ARS`
| n/a

| `AUD`
| `cim:Currency.AUD`
| n/a

| `AWG`
| `cim:Currency.AWG`
| n/a

| `AZN`
| `cim:Currency.AZN`
| n/a

| `BAM`
| `cim:Currency.BAM`
| n/a

| `BBD`
| `cim:Currency.BBD`
| n/a

| `BDT`
| `cim:Currency.BDT`
| n/a

| `BGN`
| `cim:Currency.BGN`
| n/a

| `BHD`
| `cim:Currency.BHD`
| n/a

| `BIF`
| `cim:Currency.BIF`
| n/a

| `BMD`
| `cim:Currency.BMD`
| n/a

| `BND`
| `cim:Currency.BND`
| n/a

| `BOB`
| `cim:Currency.BOB`
| n/a

| `BOV`
| `cim:Currency.BOV`
| n/a

| `BRL`
| `cim:Currency.BRL`
| n/a

| `BSD`
| `cim:Currency.BSD`
| n/a

| `BTN`
| `cim:Currency.BTN`
| n/a

| `BWP`
| `cim:Currency.BWP`
| n/a

| `BYR`
| `cim:Currency.BYR`
| n/a

| `BZD`
| `cim:Currency.BZD`
| n/a

| `CAD`
| `cim:Currency.CAD`
| n/a

| `CDF`
| `cim:Currency.CDF`
| n/a

| `CHF`
| `cim:Currency.CHF`
| n/a

| `CLF`
| `cim:Currency.CLF`
| n/a

| `CLP`
| `cim:Currency.CLP`
| n/a

| `CNY`
| `cim:Currency.CNY`
| n/a

| `COP`
| `cim:Currency.COP`
| n/a

| `COU`
| `cim:Currency.COU`
| n/a

| `CRC`
| `cim:Currency.CRC`
| n/a

| `CUC`
| `cim:Currency.CUC`
| n/a

| `CUP`
| `cim:Currency.CUP`
| n/a

| `CVE`
| `cim:Currency.CVE`
| n/a

| `CZK`
| `cim:Currency.CZK`
| n/a

| `DJF`
| `cim:Currency.DJF`
| n/a

| `DKK`
| `cim:Currency.DKK`
| n/a

| `DOP`
| `cim:Currency.DOP`
| n/a

| `DZD`
| `cim:Currency.DZD`
| n/a

| `EEK`
| `cim:Currency.EEK`
| n/a

| `EGP`
| `cim:Currency.EGP`
| n/a

| `ERN`
| `cim:Currency.ERN`
| n/a

| `ETB`
| `cim:Currency.ETB`
| n/a

| `EUR`
| `cim:Currency.EUR`
| n/a

| `FJD`
| `cim:Currency.FJD`
| n/a

| `FKP`
| `cim:Currency.FKP`
| n/a

| `GBP`
| `cim:Currency.GBP`
| n/a

| `GEL`
| `cim:Currency.GEL`
| n/a

| `GHS`
| `cim:Currency.GHS`
| n/a

| `GIP`
| `cim:Currency.GIP`
| n/a

| `GMD`
| `cim:Currency.GMD`
| n/a

| `GNF`
| `cim:Currency.GNF`
| n/a

| `GTQ`
| `cim:Currency.GTQ`
| n/a

| `GYD`
| `cim:Currency.GYD`
| n/a

| `HKD`
| `cim:Currency.HKD`
| n/a

| `HNL`
| `cim:Currency.HNL`
| n/a

| `HRK`
| `cim:Currency.HRK`
| n/a

| `HTG`
| `cim:Currency.HTG`
| n/a

| `HUF`
| `cim:Currency.HUF`
| n/a

| `IDR`
| `cim:Currency.IDR`
| n/a

| `ILS`
| `cim:Currency.ILS`
| n/a

| `INR`
| `cim:Currency.INR`
| n/a

| `IQD`
| `cim:Currency.IQD`
| n/a

| `IRR`
| `cim:Currency.IRR`
| n/a

| `ISK`
| `cim:Currency.ISK`
| n/a

| `JMD`
| `cim:Currency.JMD`
| n/a

| `JOD`
| `cim:Currency.JOD`
| n/a

| `JPY`
| `cim:Currency.JPY`
| n/a

| `KES`
| `cim:Currency.KES`
| n/a

| `KGS`
| `cim:Currency.KGS`
| n/a

| `KHR`
| `cim:Currency.KHR`
| n/a

| `KMF`
| `cim:Currency.KMF`
| n/a

| `KPW`
| `cim:Currency.KPW`
| n/a

| `KRW`
| `cim:Currency.KRW`
| n/a

| `KWD`
| `cim:Currency.KWD`
| n/a

| `KYD`
| `cim:Currency.KYD`
| n/a

| `KZT`
| `cim:Currency.KZT`
| n/a

| `LAK`
| `cim:Currency.LAK`
| n/a

| `LBP`
| `cim:Currency.LBP`
| n/a

| `LKR`
| `cim:Currency.LKR`
| n/a

| `LRD`
| `cim:Currency.LRD`
| n/a

| `LSL`
| `cim:Currency.LSL`
| n/a

| `LTL`
| `cim:Currency.LTL`
| n/a

| `LVL`
| `cim:Currency.LVL`
| n/a

| `LYD`
| `cim:Currency.LYD`
| n/a

| `MAD`
| `cim:Currency.MAD`
| n/a

| `MDL`
| `cim:Currency.MDL`
| n/a

| `MGA`
| `cim:Currency.MGA`
| n/a

| `MKD`
| `cim:Currency.MKD`
| n/a

| `MMK`
| `cim:Currency.MMK`
| n/a

| `MNT`
| `cim:Currency.MNT`
| n/a

| `MOP`
| `cim:Currency.MOP`
| n/a

| `MRO`
| `cim:Currency.MRO`
| n/a

| `MUR`
| `cim:Currency.MUR`
| n/a

| `MVR`
| `cim:Currency.MVR`
| n/a

| `MWK`
| `cim:Currency.MWK`
| n/a

| `MXN`
| `cim:Currency.MXN`
| n/a

| `MYR`
| `cim:Currency.MYR`
| n/a

| `MZN`
| `cim:Currency.MZN`
| n/a

| `NAD`
| `cim:Currency.NAD`
| n/a

| `NGN`
| `cim:Currency.NGN`
| n/a

| `NIO`
| `cim:Currency.NIO`
| n/a

| `NOK`
| `cim:Currency.NOK`
| n/a

| `NPR`
| `cim:Currency.NPR`
| n/a

| `NZD`
| `cim:Currency.NZD`
| n/a

| `OMR`
| `cim:Currency.OMR`
| n/a

| `PAB`
| `cim:Currency.PAB`
| n/a

| `PEN`
| `cim:Currency.PEN`
| n/a

| `PGK`
| `cim:Currency.PGK`
| n/a

| `PHP`
| `cim:Currency.PHP`
| n/a

| `PKR`
| `cim:Currency.PKR`
| n/a

| `PLN`
| `cim:Currency.PLN`
| n/a

| `PYG`
| `cim:Currency.PYG`
| n/a

| `QAR`
| `cim:Currency.QAR`
| n/a

| `RON`
| `cim:Currency.RON`
| n/a

| `RSD`
| `cim:Currency.RSD`
| n/a

| `RUB`
| `cim:Currency.RUB`
| n/a

| `RWF`
| `cim:Currency.RWF`
| n/a

| `SAR`
| `cim:Currency.SAR`
| n/a

| `SBD`
| `cim:Currency.SBD`
| n/a

| `SCR`
| `cim:Currency.SCR`
| n/a

| `SDG`
| `cim:Currency.SDG`
| n/a

| `SEK`
| `cim:Currency.SEK`
| n/a

| `SGD`
| `cim:Currency.SGD`
| n/a

| `SHP`
| `cim:Currency.SHP`
| n/a

| `SLL`
| `cim:Currency.SLL`
| n/a

| `SOS`
| `cim:Currency.SOS`
| n/a

| `SRD`
| `cim:Currency.SRD`
| n/a

| `STD`
| `cim:Currency.STD`
| n/a

| `SYP`
| `cim:Currency.SYP`
| n/a

| `SZL`
| `cim:Currency.SZL`
| n/a

| `THB`
| `cim:Currency.THB`
| n/a

| `TJS`
| `cim:Currency.TJS`
| n/a

| `TMT`
| `cim:Currency.TMT`
| n/a

| `TND`
| `cim:Currency.TND`
| n/a

| `TOP`
| `cim:Currency.TOP`
| n/a

| `TRY`
| `cim:Currency.TRY`
| n/a

| `TTD`
| `cim:Currency.TTD`
| n/a

| `TWD`
| `cim:Currency.TWD`
| n/a

| `TZS`
| `cim:Currency.TZS`
| n/a

| `UAH`
| `cim:Currency.UAH`
| n/a

| `UGX`
| `cim:Currency.UGX`
| n/a

| `USD`
| `cim:Currency.USD`
| n/a

| `UYU`
| `cim:Currency.UYU`
| n/a

| `UZS`
| `cim:Currency.UZS`
| n/a

| `VEF`
| `cim:Currency.VEF`
| n/a

| `VND`
| `cim:Currency.VND`
| n/a

| `VUV`
| `cim:Currency.VUV`
| n/a

| `WST`
| `cim:Currency.WST`
| n/a

| `XAF`
| `cim:Currency.XAF`
| n/a

| `XCD`
| `cim:Currency.XCD`
| n/a

| `XOF`
| `cim:Currency.XOF`
| n/a

| `XPF`
| `cim:Currency.XPF`
| n/a

| `YER`
| `cim:Currency.YER`
| n/a

| `ZAR`
| `cim:Currency.ZAR`
| n/a

| `ZMK`
| `cim:Currency.ZMK`
| n/a

| `ZWL`
| `cim:Currency.ZWL`
| n/a
|===